2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: made "/etc/exports" the default NFS exports file
	for all distros, this is pretty standard
	* share.pl.in, shares-conf.in: small fixes, made it work (at least 
	the SMB exports) with all the distributions that network-conf 
	already supports
	* users-conf.in: Added <allows_to> tag for some groups.

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-13  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2004-09-12  Mugurel Tudor  <mugurelu@go.ro>

	* configure.in: Added "ro" to ALL_LINGUAS

2004-09-08  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" and "zh_CN" to ALL_LINGUAS.

2004-09-08  Arafat Medini  <lumina@arabeyes.org>

	* configure.in: Added Arabic locale "ar" to ALL_LINGUAS.

2004-09-03  Jayaradha <njaya@redhat.com>

	* configure.in: Added ta to ALL_LINGUAS
2004-09-02  Ilkka Tuohela <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2003-09-01  Hasbullah Bin Pit  <sebol@my-penguin.org>
                                                                                
        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.

2004-08-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot-grub.pl.in (boot_grub_check_device_map): Added, it creates
	the devices map with the grub shell if the file doesn't exist,
	it's not perfect, but I can't think a better solution. Probably fixes
	#150557
	
	* boot.pl.in: call boot_grub_check_device_map() in the grub case
	
	* file.pl.in (gst_file_run_pipe): silenced output in the
	GST_FILE_WRITE case

2004-08-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, platform.pl.in, service.pl.in, services-conf.in,
	time-conf.in, users-conf.in: Added support for SuSE 9.1

2004-08-29  Carlos Garnacho Parro  <carlosg@gnome.org>
