@@ -368,7 +368,7 @@ sub gst_share_parse_smb_conf
   for $section (@sections)
   {
     next if ($section =~ /^(global)|(homes)|(printers)$/);
-    next if (!&gst_parse_ini_bool ($smb_conf_name, $section, "printable"));
+    next if (&gst_parse_ini_bool ($smb_conf_name, $section, "printable"));
 
     my $sesi = &gst_share_smb_info_new ();
     my $point, $comment, $enabled, $browseable, $public, $writable, $printable;
@@ -403,7 +403,7 @@ sub gst_share_parse_nfs_exports
   my (@sections, $table, $entries);
   my $point;
 
-  $table = gst_share_nfs_table_new ();
+  $table = &gst_share_nfs_table_new ();
 
   $entries = &gst_parse_split_hash_with_continuation ($nfs_exports_name, "[ \t]+", "[ \t]+");
 
@@ -452,7 +452,7 @@ sub gst_share_parse_nfs_exports
 sub gst_share_replace_smb_conf
 {
   my ($file, $table) = @_;
-  my (@sections);
+  my (@sections, $export);
 
   # Get the sections.
 
@@ -735,34 +735,21 @@ sub gst_share_replace_nfs_exports  # filename, table
   {
     my $old_info = &gst_share_nfs_table_find_info_equivalent ($old_table, $info);
 
-#    print "Looking for entry - ";
     if (!$old_info)
     {
-#      print "adding.\n";
       &gst_share_nfs_exports_add_entry ($file, $info);
     }
     elsif ($old_info && !&gst_share_nfs_info_match_data ($old_info, $info))
     {
-#      print "updating.\n";
       &gst_share_nfs_exports_update_entry ($file, $info);
-    }
-    else
-    {
-#      print "found.\n";
     }
   }
 
   for $old_info (@$old_table)
   {
-#    print "Looking for entry - ";
     if (!&gst_share_nfs_table_find_info_equivalent ($new_table, $old_info))
     {
-#      print "removing.\n";
       &gst_share_nfs_exports_remove_entry ($file, $old_info);
-    }
-    else
-    {
-#      print "found.\n";
     }
   } 
 }
