@@ -1,5 +1,16 @@
 2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>
 
+	* network-conf.in (xml_print_statichost): moved to network.pl.in
+	* network.pl.in (network_xml_print_statichost): added
+	* parse.pl.in: fixed a bug when searching in .ini like files, now
+	it stops at the end of the section
+	* share.pl.in, shares-conf.in: removed/comented unused code, made
+	it safe to store info in modern systems, added the get_network_conf
+	directive
+	* xml.pl.in: fixed a badly indented line
+
+2004-09-14  Carlos Garnacho Parro  <carlosg@gnome.org>
+
 	* shares-conf.in: made "/etc/exports" the default NFS exports file
 	for all distros, this is pretty standard
 	* share.pl.in, shares-conf.in: small fixes, made it work (at least 
